corrected api docs because javadoc parser became stricter (mostly < and >) minor changes due to PMD report.
git-svn-id: file:///SVN_Archive/Software/trunk@12824 9b6744e0-6d27-0410-8403-e1b9a971d29b